2007-05-25  Kevin Cozens  <kcozens@cvs.gnome.org>

	This is the first part of fixing bugs #438997 and #440674. 

	* plug-ins/script-fu/scheme-wrapper.c: Removed ts_output_routine
	declaration from here...

	* plug-ins/script-fu/tinyscheme/scheme.h: and added it here.

	* plug-ins/script-fu/tinyscheme/scheme.c (putchars): Updated to be
	smarter about where it's output needs to be sent.

2007-05-25  Sven Neumann  <sven@gimp.org>

	* app/composite/gimp-composite-mmx.c
	* app/composite/gimp-composite-sse2.c
	* app/composite/gimp-composite-regression.c: minor code cleanup.

2007-05-25  Sven Neumann  <sven@gimp.org>

	* app/composite/gimp-composite-sse-test.c
	* app/composite/gimp-composite-test.c
	* app/composite/gimp-composite-sse2-test.c
	* app/composite/gimp-composite-altivec-test.c
	* app/composite/gimp-composite-3dnow-test.c
	* app/composite/gimp-composite-mmx-test.c
	* app/composite/gimp-composite-vis-test.c: minor code cleanup.

2007-05-25  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpsessioninfoaux.[ch]
	* app/widgets/gimpsessioninfobook.[ch]
	* app/widgets/gimpsessioninfodock.[ch]
	* app/widgets/gimpsessioninfodockable.[ch]: renamed these...

	* app/widgets/gimpsessioninfo-aux.[ch]
	* app/widgets/gimpsessioninfo-book.[ch]
	* app/widgets/gimpsessioninfo-dock.[ch]
	* app/widgets/gimpsessioninfo-dockable.[ch]: ...to these.

	* app/widgets/Makefile.am
	* app/widgets/gimpcoloreditor.c
	* app/widgets/gimpcursorview.c
	* app/widgets/gimpdataeditor.c
	* app/widgets/gimpdocked.c
	* app/widgets/gimphistogrameditor.c
	* app/widgets/gimpmenudock.c
	* app/widgets/gimppaletteeditor.c
	* app/widgets/gimpsessioninfo.c: changed accordingly.

2007-05-25  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpparasite.c: allocate parasites using GSlice.

2007-05-25  Sven Neumann  <sven@gimp.org>

	* gimptool-2.0.in: require pkg-config and use it to determine
	cflags and libs.

	* docs/gimptool.1.in: document that pkg-config is used and
	recommend to use pkg-config directly.
