@@ -34,7 +34,7 @@ void          tinyscheme_init      (const gchar *path,
                                     gboolean     local_register_scripts);
 void          tinyscheme_deinit    (void);
 
-void          ts_output_string     (FILE *fp, char *string, int len);
+void          ts_output_string     (const char *string, int len);
 
 /* if the return value is 0, success. error otherwise. */
 gint          ts_interpret_string  (const gchar *);
